<resources>
    <string name="app_name">Network App</string>
    <string name="no_internet_message">Internet connection appears to be offline. Please check your network settings.</string>
    <string name="please_wait">Please wait…</string>
    <string name="on">on</string>
    <string name="nothing_available">Nothing available</string>
    <string name="permission_denied">Permission has been denied, you need to give permission to do the operation, press OK to open settings</string>
    <string name="not_visited_yet">Not visited yet!</string>
    <string name="dialog_app_name">Best Tyme</string>

    <array name="menuOptions">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
    </array>

    <string name="tag_menu">menu</string>
    <string name="tag_content">content</string>
    <string name="tag_menuu">menu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="referral">Referral</string>
    <string name="database">Database</string>
    <string name="name">User Name</string>
    <string name="title_one">Day Todo</string>
    <string name="title_two">Leaderboard | VIPS</string>
    <string name="new_contact">New Contact</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_address">Address</string>
    <string name="hint_company">Company</string>
    <string name="hint_industry">Industry</string>
    <string name="hint_general_notes">General Notes</string>
    <string name="hint_birthday">Birthday If Know</string>
    <string name="hint_contact_time">Contact Time</string>
    <string name="hint_contact_method">Contact Method</string>
    <string name="hint_adv_menu">Advance Menu</string>
    <string name="btn_submit">Submit</string>
    <string name="tv_status">Status</string>
    <string name="tv_priority">Priority</string>
    <string name="btn_apply_filter">Apply Filter</string>
    <string name="new_referral">New Referral</string>
    <string name="existing_referral">Existing Referral</string>
    <string name="to_from_database">To-From Database</string>
    <string name="name_of_referral">Name of referral</string>
    <string name="phone_number">Phone number</string>
    <string name="how_they_want_to_be_contacted">How they want to be contacted</string>
    <string name="notes_about_referral">Notes about referral</string>
    <string name="send">send</string>


    <string name="check_your_internet">Please check your internet connection</string>
    <string name="ok_text">OK</string>

    <string name="time_quote">"Realize that now,in this moment of time.you are creating. You are creating your next
        moment. That is what\'s real."
    </string>
    <string name="time_quote_author">Sara Paddison</string>

    <string name="meditation_quote">"Meditation is like a gym in which you develop the powerful mental muscles of calm
        and insight."
    </string>
    <string name="meditation_author">Ajahn Brahm</string>

    <string name="management_quote">"Management is, above all, a practice where art, science, and craft meet."</string>
    <string name="management_author">Henry Mintzberg</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user">Don\'t have an account?
        <font fgcolor='#FFFF00'>Create now</font>
    </string>
    <string name="username">Full Name</string>
    <string name="mobile">Phone No.</string>
    <string name="confirm_password">Re-type Password</string>
    <string name="signup">Create account</string>
    <string name="already_have_acc">Already have an account?
        <font fgcolor='#FFFF00'>Login here</font>
    </string>
    <string name="required_field">This field is required</string>
    <string name="invalid_email">Enter a valid email address</string>
    <string name="password_length">Password must be of 6-8 characters</string>
    <string name="invalid_number">Enter a valid number</string>
    <string name="number_length">Enter a 10 digit number</string>
    <string name="not_valid_number">Not a valid number</string>
    <string name="password_not_same">Password should be same</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_gender">Please select gender</string>
    <string name="questions">Questions</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="favourites">Favourites</string>
    <string name="logout">Logout</string>
    <string name="dashboard">Dashboard</string>
    <string name="update_profile">Update Picture</string>
    <string name="login_here">Login here</string>
    <string name="lets_join_now">Login Now</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_with">Or login with</string>
    <string name="signup_with">Or Signup with</string>


    <string name="facebook_app_id">2447565525476300</string>
    <string name="select_marketplace">Select Marketplace</string>
    <string name="home">Home</string>
    <string name="phone_numberr">Phone Number</string>
    <string name="address">Address</string>
    <string name="tv_name">Name</string>
    <string name="title">Title</string>
    <string name="company">Company</string>
    <string name="follow_up_time">Follow Up Time</string>
    <string name="follow_up_note">Follow Up Notes</string>
    <string name="_12_sept">12 \n Sept</string>


    <array name="market_place_array">
        <item>Select Marketplace Type</item>
        <item>Product marketplace</item>
        <item>Rental marketplace</item>
        <item>Service marketplace</item>
    </array>


</resources>
