<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:padding="@dimen/_8sdp"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="2dp"
    card_view:cardUseCompatPadding="true"
    card_view:rippleColor="#cfd8dc">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="404dp"
        android:layout_height="102dp"
        android:background="#FAFAFA"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        android:paddingBottom="@dimen/_20sdp">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="60dp"
            android:layout_height="68dp"
            android:background="@drawable/ic_account"
            card_view:civ_border_color="#FF000000"
            card_view:civ_border_width="2dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/name"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/profile_image"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/hint_email"
            android:textSize="@dimen/_16ssp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/profile_image"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/hint_phone_number"
            android:textSize="@dimen/_16ssp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/profile_image"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>