<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".07" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".93" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".10" />

        <TextView
            android:id="@+id/iv_logo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_35ssp"
            app:layout_constraintBottom_toTopOf="@id/iv_userIcon"
            app:layout_constraintEnd_toEndOf="@id/guideline1"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/guideline2" />

        <ImageView
            android:id="@+id/iv_userIcon"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/email_icon"
            app:layout_constraintEnd_toStartOf="@+id/et_email"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:paddingLeft="@dimen/_15sdp"
            android:singleLine="true"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toStartOf="@id/guideline1"
            app:layout_constraintStart_toEndOf="@id/iv_userIcon"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@android:color/white"
            app:layout_constraintEnd_toStartOf="@id/guideline1"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/et_email" />


        <ImageView
            android:id="@+id/iv_passIcon"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/password_icon"
            app:layout_constraintEnd_toStartOf="@+id/et_email"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/_15sdp"
            android:singleLine="true"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toStartOf="@id/guideline1"
            app:layout_constraintStart_toEndOf="@id/iv_passIcon"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <View
            android:id="@+id/view_1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@android:color/white"
            app:layout_constraintEnd_toStartOf="@id/guideline1"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <TextView
            android:id="@+id/tv_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/view_1" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/white_lined_round_bg"
            android:text="@string/lets_join_now"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toStartOf="@id/guideline1"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_forgotPassword" />


        <View
            android:id="@+id/view_3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@android:color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/tv_login_with"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <TextView
            android:id="@+id/tv_login_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/login_with"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_13ssp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/view_4"
            app:layout_constraintStart_toEndOf="@id/view_3"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <View
            android:id="@+id/view_4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:background="@android:color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/btn_login"
            app:layout_constraintStart_toEndOf="@id/tv_login_with"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_goneMarginRight="@dimen/_10sdp" />


        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/facebook_login"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/btn_google"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/view_3"
            app:layout_goneMarginLeft="@dimen/_10sdp" />

        <Button
            android:id="@+id/btn_google"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/google_login"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/guideline1"
            app:layout_constraintStart_toEndOf="@id/btn_facebook"
            app:layout_constraintTop_toBottomOf="@id/view_3"
            app:layout_goneMarginLeft="@dimen/_10sdp" />

        <TextView
            android:id="@+id/tv_newUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/new_user"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline1"
            app:layout_constraintStart_toEndOf="@id/guideline" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>